Align Orientation to Target keeps rotation when toggled #89571

Closed
opened 2021-07-01 03:45:08 +02:00 by Campbell Barton · 5 comments

Blender Version
2.93 & (master), be451354c9251d816b0e2950e334ae44931f6166

Short description of error

Snapping with to faces in edit-mode with "Align Orientation to Target" enabled, keeps the rotation even when snap is disabled.

Exact steps for others to reproduce the error

With this file:- snap_toggle_keeps_rotation.blend

  • G key.
  • Hold Ctrl.
  • Move the cube over the un-selected mesh, notice the mesh rotates.
  • Rlease Ctrl.
  • The rotation is kept, even when the cursor is moved away from the mesh, although the offset from rotating is lost.

Reporting reference, will fix shortly.

**Blender Version** 2.93 & (master), `be451354c9251d816b0e2950e334ae44931f6166` **Short description of error** Snapping with to faces in edit-mode with "Align Orientation to Target" enabled, keeps the rotation even when snap is disabled. **Exact steps for others to reproduce the error** With this file:- [snap_toggle_keeps_rotation.blend](https://archive.blender.org/developer/F10206554/snap_toggle_keeps_rotation.blend) - G key. - Hold Ctrl. - Move the cube over the un-selected mesh, notice the mesh rotates. - Rlease Ctrl. - The rotation is kept, even when the cursor is moved away from the mesh, although the offset from rotating is lost. --- *Reporting reference, will fix shortly.*
Campbell Barton self-assigned this 2021-07-01 03:45:08 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This issue was referenced by 4546f176eb

This issue was referenced by 4546f176eb0f822048b53766f2e97c5a4cbf53c6
Campbell Barton changed title from Align Orientation to Target rotation is kep when snapping is disabled to Align Orientation to Target keeps rotation when toggled 2021-07-01 03:55:12 +02:00

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

This issue was referenced by aa1bbadb5b

This issue was referenced by aa1bbadb5b6a2555d2a106f1362c6718adbdeaf0
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89571
There is no content yet.