Fix T89571: Align Orientation to Target keeps rotation when toggled